<resources>
    <string name="app_name">GazteMap</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="email" translatable="false">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="errorUsuarioEmailCogidos">Nombre de usuario o email ya en uso.</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="atras">Atrás</string>
    <string name="usuarioCreado">Usuario creado con éxito.</string>
    <string name="usuarioError">Error al crear el usuario.</string>
    <string name="loginExitoso">Se ha iniciado sesión con éxito.</string>
    <string name="loginIncorrecto">Email o contraseña incorrectos.</string>
    <string name="loginError">Error al iniciar sesión.</string>
    <string name="opciones">Opciones</string>
    <string name="top500" translatable="false">Top 500</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="viajar">Viajar</string>
    <string name="español">Español</string>
    <string name="ingles">Inglés</string>
    <string name="euskera">Euskera</string>
    <string name="sistema">Sistema</string>
    <string name="oscuro">Oscuro</string>
    <string name="claro">Claro</string>
    <string name="idioma">🌐 Idioma</string>
    <string name="tema">🎨 Tema</string>
    <string name="eligeIdioma">Elige un idioma</string>
    <string name="eligeTema">Elige un tema</string>
    <string name="errorEmail">Introduce un email válido.</string>
    <string name="faltanCampos">Rellena todos los campos.</string>
    <string name="bienvenidoVuelta">Bienvenid@ de vuelta, %1s</string>
    <string name="entrar">Entrar</string>
    <string name="cambiarUsuario">Cambiar usuario</string>
    <string name="recuerdame">Recuérdame</string>
    <string name="amigos">Amigos</string>
    <string name="menu_button">Abrir menú</string>
    <string name="apartados">📌 Apartados</string>
    <string name="apartado_mapa">🗺️ Mapa</string>
    <string name="apartado_TOP500">🏆 Top usuarios</string>
    <string name="apartado_amigos">🤝 Amigos</string>
    <string name="apartado_foro">💬 Foro</string>
    <string name="apartado_configuracion">⚙️ Opciones</string>
    <string name="alerta_notificaciones">Notificaciones</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="nuevo_post">Nuevo post</string>
    <string name="escribe_algo">¿Qué quieres compartir hoy?</string>
    <string name="publicar">Publicar</string>
    <string name="descripcion_menu">Abrir menú de navegación</string>
    <string name="descripcion_nuevo_post">Crear nueva publicación</string>
    <string name="nav_header_title" translatable="false">GazteMap</string>
    <string name="nav_header_subtitle">Comunidad vasca</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="sinAmigos">No tienes amigos todavía.</string>
    <string name="contraseñaNueva">Coontraseña nueva</string>
    <string name="editarPerfil">Editar perfil</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="guardar">Guardar</string>
    <string name="necesitaContraseña">Escribe tu contraseña actual</string>




    <string name="top_500" translatable="false">Top 500</string>
    <string name="leaderboard">Compite con otros usuarios y gana puntos</string>
    <string name="points_cantidad">%d puntos</string>
    <string name="points_placeholder">0 puntos</string>
    <string name="rank">Tu posición: #%d</string>
    <string name="rank_placeholder">Tu posición: #0</string>
    <string name="historico">Total</string>
    <string name="mensual">Mensual</string>
    <string name="semanal">Semanal</string>
    <string name="diario">Diario</string>
    <string name="menu">Menú</string>
    <string name="requierePermisosGal">Esta función requiere permisos de galería.</string>
    <string name="requierePermisosCam">Esta función requiere permisos de cámara.</string>
    <string name="cambiosTardan">Los cambios tardarán un poco en aplicarse.</string>



    <string name="boton_trans">Opciones de transporte</string>
    <string name="layers_button">Opcion de ver mapa entero</string>
    <string name="near_me_button">Botón de ubicación cercana</string>
    <string name="opciones_patita">Opción andando</string>
    <string name="patita">Andando</string>
    <string name="opciones_bus">Opción bus</string>
    <string name="bus">Bus</string>
    <string name="opciones_bici">Opción bicicleta</string>
    <string name="bicicleta">Bicicleta</string>
    <string name="añadir">Añadir</string>
    <string name="sinResultados">Sin resultados.</string>
    <string name="solicitudMandada">Se ha mandado la solicitud.</string>
    <string name="solicitudPendiente">La solicitud sigue pendiente.</string>
    <string name="yaAmigos">Ya eres amigo de este usuario.</string>
    <string name="soliAceptada">Solicitud aceptada.</string>
    <string name="soliRechazada">Solicitud rechazada.</string>
    <string name="soliError">Error al procesar solicitud.</string>
    <string name="sinSoli">No tienes solicitudes todavía.</string>
    <string name="lamigos">Leaderboard Amigos 🫂</string>
    <string name="lGlobal">Leaderboard Global 🌎</string>
    <string name="stock_nom">Seleccione una acción</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="password">Contraseña</string>
    <string name="a">"¡Gracias por descargar!"</string>
    <string name="foto_usuario">Seleccionar foto de perfil</string>
    <string name="email_ya_registrado">Este correo ya está registrado</string>
    <string name="nombre">Nombre completo</string>
    <string name="confirmar_password">Confirmar contraseña</string>
    <string name="completar_registro">Completar registro</string>

    <string name="error_loading_leaderboard">Error al cargar el leaderboard</string>
    <string name="leaderboard_top_5">Top 5 del Leaderboard</string>

    <string name="traduccion">Traducir</string>
    <string name="traduciendo">Traduciendo...</string>
    <string name="ver_original">Ver original</string>
    <string name="likes"> me gusta</string>
    <string name="comentarios">comentarios</string>
    <string name="buscarUsuariosPuntos">Buscar usuarios...</string>
    <string name="comentaPuntos">Escribe un comentario...</string>
    <string name="notisActivadas">Notificaciones activadas</string>
    <string name="errorActivarNotis">Error al activar notificaciones.</string>
    <string name="notisDesactivadas">Notificaciones desactivadas</string>
    <string name="errorDesactivarNotis">Error al desactivar notificaciones.</string>
    <string name="errorComentar">Error al enviar comentario.</string>
    <string name="comenta">Escribe un comentario</string>
    <string name="errorCargaComentarios">Error al cargar comentarios.</string>
    <string name="compUbicación">Compartir ubicación</string>
    <string name="cuExplicado">Permite a tus amigos ver tu ubicación.</string>
    <string name="pendiente">Pendiente</string>

</resources>