<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/n_perfil"
        android:title=""
        android:enabled="false"
        app:actionLayout="@layout/nav_perfil"/>

    <item android:title="@string/apartados">
        <menu>
            <item
                android:id="@+id/Viajar"
                android:title="@string/apartado_mapa"
                android:checkable="true"
                android:checked="true"/>
            <item
                android:id="@+id/Top500"
                android:title="@string/apartado_TOP500"
                android:checkable="true"/>
            <item
                android:id="@+id/Amigos"
                android:title="@string/apartado_amigos"
                android:checkable="true"/>
            <item
                android:id="@+id/Opciones"
                android:title="@string/apartado_configuracion"
                android:checkable="true"/>
        </menu>
    </item>

</menu>